Bugfixes, WIP visibility

--- a/myPhyloDB/media/css/style.css
+++ b/myPhyloDB/media/css/style.css
@@ -66,6 +66,10 @@ table, fieldset {
 	text-align: center;
 }
 
+span.dynatree-highlight {
+	background-color: red;
+}
+
 .menuItems {
     margin-top: 10px;
 	text-align: center;
